--- a/firebase-chat/src/styles/Chat.css
+++ b/firebase-chat/src/styles/Chat.css
@@ -1,10 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400&display=swap");
+
+body {
+  font-family: "Roboto Slab", serif;
+  font-weight: 400;
+  background-color: white;
+}
+
 .chat-app {
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: sans-serif;
   width: 90%;
-  margin: 0 auto;
+  margin: 250px auto;
   border-radius: 5px;
   overflow: hidden;
   border: 2px solid #3b5998;
@@ -62,4 +76,7 @@
   color: #fff;
   font-size: 16px;
   font-weight: bold;
+  border-radius: 10px;
+  width: 150px;
+  margin: 0 10px;
 }
